# binary_file_multiplier

./: Cargo.toml  README.md
.github/workflows/: github-ci.yml
src/: main.rs
